# dex-chart-dashboard

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  watchlist.example.json
.github/workflows/: ci.yml
examples/: quickstart.py
src/dexscope/: __init__.py  alertlog.py  alerts.py  cache.py  chains.py  chart.py  cli.py  config.py  dexscreener.py  exporter.py  formatting.py  gecko.py  indicators.py  models.py  ratelimit.py  report.py  snapshot.py  util.py  watchlist.py  web.py
src/dexscope/static/: app.js  styles.css
src/dexscope/templates/: base.html  compare.html  index.html  token.html
tests/: conftest.py  test_alertlog.py  test_alerts.py  test_cache.py  test_chains.py  test_chart.py  test_cli_new_commands.py  test_cli_v04_flags.py  test_config.py  test_dexscreener.py  test_exporter.py  test_exporter_indicators.py  test_formatting.py  test_formatting_branches.py  test_gecko.py  test_indicators.py  test_indicators_branches.py  test_indicators_macd_bb.py  test_ratelimit.py  test_report.py  test_resample.py  test_snapshot.py  test_util.py  test_watchlist.py  test_web.py
tests/fixtures/: dexscreener_token.json  gecko_ohlcv_1h.json
