[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-chart-dashboard"
version = "0.3.0"
description = "Self-hosted DEX token chart dashboard — multi-timeframe candlesticks from free APIs (GeckoTerminal + DexScreener), no API keys."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baronguyen001" }]
keywords = [
    "dex", "crypto", "candlestick", "ohlcv", "dashboard", "geckoterminal",
    "dexscreener", "solana", "ethereum", "trading-chart", "self-hosted",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/baronguyen001/dex-chart-dashboard"
Repository = "https://github.com/baronguyen001/dex-chart-dashboard"
Issues = "https://github.com/baronguyen001/dex-chart-dashboard/issues"

[project.scripts]
dexscope = "dexscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dexscope = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008", "UP017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
